<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context="hcmute.edu.vn.phamdinhquochoa.flatyapp.FlatDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/btnBack"
            android:contentDescription="@string/back"
            android:layout_gravity="center_vertical"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"/>

        <TextView
            android:id="@+id/tvFlatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:text="@string/Flat_type"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/content_description_image"
        android:scaleType="fitXY"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/region1"/>
    <LinearLayout
        android:id="@+id/admin_editor_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/button_edit_flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_noodle"
            android:fontFamily="@font/noto_sans_bold"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:minWidth="150dp"
            android:text="@string/edit_flat"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_delete_flat"
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_box_rounded_red"
            android:fontFamily="@font/noto_sans_bold"
            android:padding="10dp"
            android:text="@string/delete_flat"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11sp"
                android:text="@string/describe"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="303dp"
                android:layout_height="91dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/example_Flat_describe"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11sp"
                android:text="@string/Region_information"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvRegionName"
                android:layout_width="303dp"
                android:layout_height="91dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/app_name"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tvRegionAddress"
                android:layout_width="303dp"
                android:layout_height="91dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/address"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/teal_700"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="NestedWeights">
            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/money_text"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <Button
                android:layout_marginStart="10dp"
                android:id="@+id/btnSavedFlat"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="5dp"
                android:background="@drawable/saved_icon"
                android:backgroundTint="@color/choose_color"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>