<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginStart="10sp"
        android:layout_margin="5sp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cake"
        android:orientation="horizontal"
        android:weightSum="10"
        android:elevation="10sp"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/imageCartFlat"
            android:contentDescription="@string/content_description_image"
            android:scaleType="fitXY"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:layout_gravity="center"
            android:layout_width="0sp"
            android:layout_height="77sp"
            android:src="@drawable/flat"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />
        <LinearLayout

            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">
            <TextView
                android:id="@+id/tvFlatNameCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egg_banh_mi"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvFlatSizeCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5sp"
                    android:text="@string/example_size"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tvFlatPriceCart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/money_text"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvRegionNameCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <Button
                    android:id="@+id/btnSubQuantity_Cart"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:backgroundTint="@color/sub_color"
                    android:text="@string/sub"/>
                <TextView
                    android:id="@+id/tvFlatQuantity_Cart"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/default_quantity"/>
                <Button
                    android:id="@+id/btnAddQuantity_Cart"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:backgroundTint="@color/sub_color"
                    android:text="@string/add"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_btn_delete"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:gravity="center">
            <Button
                android:id="@+id/btnDeleteCartItem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/delete"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>