<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hcmute.edu.vn.phamdinhquochoa.flatyapp.FlatEditActivity">

    <TextView
        android:id="@+id/flat_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/activity_flat_edit_text_edit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flat_edit_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/content_description_image"
                android:padding="10sp"
                android:scaleType="fitXY"
                android:layout_marginBottom="10dp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/button_change_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_noodle"
                android:fontFamily="@font/notop_sans_regular"
                android:minWidth="280dp"
                android:padding="10dp"
                android:text="@string/choose_flat_image"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/notop_sans_regular"
                    android:gravity="center"
                    android:text="@string/flat_name"
                    android:textColor="#202020" />

                <EditText
                    android:id="@+id/editText_flat_name"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="2sp"
                    android:autofillHints="name"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/flat_name_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/notop_sans_regular"
                    android:gravity="center"
                    android:text="@string/flat_description"
                    android:textColor="#202020" />

                <EditText
                    android:id="@+id/editText_flat_description"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="2sp"
                    android:autofillHints="name"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/flat_description_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_add_flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="35dp"
            android:background="@drawable/bg_noodle"
            android:fontFamily="@font/notop_sans_regular"
            android:minWidth="150dp"
            android:padding="10dp"
            android:text="@string/save_flat"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_cancel_flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_noodle"
            android:fontFamily="@font/notop_sans_regular"
            android:minWidth="150dp"
            android:padding="10dp"
            android:text="@string/cancel_flat"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>