<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="false"
    android:focusable="false"
    android:checkable="false"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_full_name"
            android:text="@string/example_full_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_phone_number"
            android:text="@string/phone_example"
            android:textAppearance="?attr/textAppearanceBodySmall"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_request_text"
            android:text="@string/example_Flat_describe"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            />

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>
